--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,6 @@
             <version>14</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13</version>
-        </dependency>
-        <dependency>
             <groupId>org.joml</groupId>
             <artifactId>joml</artifactId>
             <version>1.9.23</version>
@@ -54,6 +49,7 @@
                 <version>0.0.5</version>
                 <configuration>
                     <mainClass>org.example.view.App</mainClass>
+                    <launcher>launch.sh</launcher>
                 </configuration>
             </plugin>
         </plugins>
